Eliminados codigo deprecado